dz2/service.yml
apiVersion: v1
kind: Service
metadata:
  name: micsvc-service
spec:
  selector:
    app: micsvc-dz2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
