dz2/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micsvc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: micsvc-service
                port:
                  number: 80
